Fix: revert li items

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -28,7 +28,7 @@ import { navItems } from '../data/nav';
           </li>
         ))
       }
-      <li class='tooltip tooltip-success tooltip-bottom' data-tip='Resume'>
+      <div class='tooltip tooltip-success tooltip-bottom' data-tip='Resume'>
         <a
           class='btn btn-square btn-ghost'
           href='https://aleksa-codes.github.io/resume/'
@@ -55,8 +55,8 @@ import { navItems } from '../data/nav';
             <path d='M4.5 17l-1.5 5l3 -1.5l3 1.5l-1.5 -5'></path>
           </svg>
         </a>
-      </li>
-      <li class='tooltip tooltip-info tooltip-bottom' data-tip='GitHub'>
+      </div>
+      <div class='tooltip tooltip-info tooltip-bottom' data-tip='GitHub'>
         <a
           class='btn btn-square btn-ghost'
           href='https://github.com/aleksa-codes'
@@ -82,8 +82,8 @@ import { navItems } from '../data/nav';
             ></path>
           </svg>
         </a>
-      </li>
-      <li class='tooltip tooltip-warning tooltip-bottom' data-tip='RSS'>
+      </div>
+      <div class='tooltip tooltip-warning tooltip-bottom' data-tip='RSS'>
         <a
           class='btn btn-square btn-ghost'
           href='/rss.xml'
@@ -107,7 +107,7 @@ import { navItems } from '../data/nav';
             <path d='M4 11a9 9 0 0 1 9 9'></path>
           </svg>
         </a>
-      </li>
+      </div>
     </ul>
     <DarkMode />
     <div class='dropdown dropdown-end md:hidden'>
