Fix: duplicate tw class

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -21,7 +21,7 @@ import { navItems } from '../data/nav';
           <li>
             <a
               href={href}
-              class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3 p-3'
+              class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3'
             >
               {label}
             </a>
