--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -112,7 +112,10 @@ import { navItems } from '../data/nav';
         <DarkMode />
       </li>
     </ul>
-    <div class='dropdown dropdown-end md:hidden'>
+    <div class='md:hidden'>
+      <DarkMode />
+    </div>
+    <div class='dropdown dropdown-end'>
       <label tabindex={0} class='btn btn-ghost btn-square'>
         <svg
           class='h-6 stroke-current first:w-6'
