Fix: hidden drop menu on desktop

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -115,7 +115,7 @@ import { navItems } from '../data/nav';
     <div class='md:hidden'>
       <DarkMode />
     </div>
-    <div class='dropdown dropdown-end'>
+    <div class='dropdown dropdown-end md:hidden'>
       <label tabindex={0} class='btn btn-ghost btn-square'>
         <svg
           class='h-6 stroke-current first:w-6'
