--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -31,6 +31,13 @@ const {
     <SEO
       {...{ title, description, siteName, canonical, ogImage, ogType, twitterHandle }}
     />
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
     <script src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js'
     ></script>
   </head>
