Fix: reduce fonts

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -1,6 +1,13 @@
 ---
-import '@fontsource/poppins/latin.css';
 import '../../styles/global.css';
+import '@fontsource/poppins';
+import '@fontsource/poppins/400-italic.css';
+import '@fontsource/poppins/500.css';
+import '@fontsource/poppins/500-italic.css';
+import '@fontsource/poppins/600.css';
+import '@fontsource/poppins/600-italic.css';
+import '@fontsource/poppins/700.css';
+import '@fontsource/poppins/800.css';
 import SEO from '../SEO.astro';
 import Footer from '../Footer.astro';
 import Navbar from '../Navbar.astro';
