--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@ import { days } from '../data/day';
             class='hover:underline'
           >
             aleksa</a
-          >{' '}• illustration by{' '}<a
+          >{' '}• art via{' '}<a
             href='https://storyset.com/'
             target='_blank'
             rel='noopener noreferrer'
