Fix: some aligning and responsivnes for posts projects and contant

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,7 +9,9 @@ import Avatar from '../components/utilities/Avatar.astro';
     <div
       class='mt-[-24px] mb-4 flex flex-col sm:flex-row items-start justify-center sm:items-center gap-4 w-full'
     >
-      <Avatar />
+      <div class='flex flex-row items-center justify-center w-full xs:w-1/2'>
+        <Avatar />
+      </div>
       <p class='w-full'>
         Feel free to reach out to me at any time, I am always interested in{' '}
         <span class='highlight'>new stuff</span>!
