--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -24,14 +24,16 @@ const post: Post = Astro.props.post;
     )
   }
   <div class='flex flex-col'>
-    <h2 class='!my-0'>
+    <h2 class='!my-0 text-center sm:text-left'>
       <a
         class='font-semibold no-underline hover:underline'
         href={`/${post.slug}`}
         >{post.title}
       </a>
     </h2>
-    <div class='flex flex-row items-center gap-2 pt-2 text-sm'>
+    <div
+      class='flex flex-row items-center justify-center gap-2 pt-2 text-sm sm:justify-start'
+    >
       <span>
         <Date date={post.date} />
       </span>
