--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,7 +19,7 @@ pre[class*='astro-code'] button {
 
   font-size: 0.9rem;
   padding: 0.15rem;
-  background-color: #828282;
+  background-color: #525252;
 
   border-radius: 5px;
   text-shadow: #c4c4c4 0 0 2px;
@@ -28,7 +28,7 @@ pre[class*='astro-code'] button {
 
 pre[class*='astro-code'] button:hover {
   cursor: pointer;
-  background-color: #999999;
+  background-color: #6b6b6b;
 }
 /* End copy to clipboard */
 /* #add9f4 - old blue color */
