Fix: roudned nav buttons and dark mode button

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -21,7 +21,7 @@ import { navItems } from '../data/nav';
           <li>
             <a
               href={href}
-              class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3'
+              class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3 rounded-md'
             >
               {label}
             </a>
@@ -33,7 +33,7 @@ import { navItems } from '../data/nav';
           href='https://aleksa-codes.github.io/resume/'
           target='_blank'
           rel='noopener noreferrer'
-          class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3'
+          class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3 rounded-md'
           aria-label='Resume'
         >
           <svg
@@ -62,7 +62,7 @@ import { navItems } from '../data/nav';
           target='_blank'
           rel='noopener noreferrer'
           aria-label='GitHub Profile'
-          class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3'
+          class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3 rounded-md'
         >
           <svg
             xmlns='http://www.w3.org/2000/svg'
@@ -87,7 +87,7 @@ import { navItems } from '../data/nav';
         <a
           href='/rss.xml'
           aria-label='RSS Feed'
-          class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3'
+          class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3 rounded-md'
         >
           <svg
             xmlns='http://www.w3.org/2000/svg'
