--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -1,5 +1,5 @@
 <label
-  class='btn btn-square btn-ghost swap swap-rotate active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3'
+  class='swap swap-rotate active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3 rounded-md'
   data-toggle-theme='winter'
   data-act-class='swap-active'
 >
