Feat: add some blog posts, SEO fix for posts description and stying on blog page

--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -23,7 +23,7 @@ const {
 
 <Layout
   title={post.title}
-  description={post.description}
+  description={post.desc}
   ogImage={post.img}
   canonical={import.meta.env.SITE + post.slug}
 >
