--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -10,8 +10,8 @@ const posts = published(markdownFiles);
   title='Blog'
   description='Blog posts about web development, design, and more.'
 >
-  <h1>Blog <span class='text-xl'>(under construction 🚧)</span></h1>
-  <div class='-mt-8'>
+  <h1>Blog</h1>
+  <div>
     {posts.map((p) => <PostCard post={p} />)}
   </div>
 </Layout>
