--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -26,6 +26,7 @@ const {
   description={post.desc}
   ogImage={post.img}
   canonical={import.meta.env.SITE + post.slug}
+  slug={post.slug}
 >
   <div class='flex justify-center'>
     <div class='flex flex-col min-w-full py-4 prose break-words lg:prose-lg'>
