Fix: og image for posts

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -63,12 +63,12 @@ const {
 <meta property='og:description' content={description} />
 <meta
   property='og:image'
-  content={slug !== undefined ? `/assets/posts/${slug}.png` : ogImage}
+  content={slug !== undefined ? `../posts/${slug}.png` : ogImage}
 />
 <meta
   property='og:image:alt'
   content={slug !== undefined
-    ? `Blog Post Social Image`
+    ? title + 'Social Image'
     : 'Aleksa Codes Social Image'}
 />
 
@@ -84,12 +84,12 @@ const {
 <meta property='twitter:description' content={description} />
 <meta
   property='twitter:image'
-  content={slug !== undefined ? `/assets/posts/${slug}.png` : ogImage}
+  content={slug !== undefined ? `../posts/${slug}.png` : ogImage}
 />
 <meta
   property='twitter:image:alt'
   content={slug !== undefined
-    ? `Blog Post Social Image`
+    ? title + 'Social Image'
     : 'Aleksa Codes Social Image'}
 />
 
