Fix: og image again

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -63,7 +63,7 @@ const {
 <meta property='og:description' content={description} />
 <meta
   property='og:image'
-  content={slug !== undefined ? `../posts/${slug}.png` : ogImage}
+  content={slug !== undefined ? `/assets/posts/${slug}.png` : ogImage}
 />
 <meta
   property='og:image:alt'
@@ -84,7 +84,7 @@ const {
 <meta property='twitter:description' content={description} />
 <meta
   property='twitter:image'
-  content={slug !== undefined ? `../posts/${slug}.png` : ogImage}
+  content={slug !== undefined ? `/assets/posts/${slug}.png` : ogImage}
 />
 <meta
   property='twitter:image:alt'
