Fix: footer text size for smaller devices, highlight underline for tech stack on project page and code block text wrapping

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ import { days } from '../data/day';
       class='grid grid-cols-1 px-4 py-8 mx-auto max-w-8xl lg:px-0 lg:grid-cols-3'
     >
       <div class=''></div>
-      <div class='mb-2 text-sm text-center md:mb-0'>
+      <div class='mb-2 text-xs xs:text-sm text-center md:mb-0'>
         <div class='mb-2 font-medium footer-text-t'>
           © 2022 Code by{' '}
           <a
