--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -50,7 +50,8 @@ import { projects } from '../data/project';
                   {tech.map((tech, index, array) => (
                     <span>
                       {index !== array.length - 1 ? (
-                        <span class='highlight'>{tech} • </span>
+                        <span class='highlight'>{tech}</span>
+                        <span> • </span>
                       ) : (
                         <span class='highlight'>{tech}</span>
                       )}
