Fix: trying something

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -37,6 +37,12 @@ const {
 
 <html lang='en'>
   <head>
+    <link
+      href='https://cdn.jsdelivr.net/npm/daisyui@2.42.1/dist/full.css'
+      rel='stylesheet'
+      type='text/css'
+    />
+    <script src='https://cdn.tailwindcss.com'></script>
     <SEO
       {...{ title, description, siteName, canonical, ogImage, ogType, twitterHandle, slug }}
     />
