--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  visibility: visible !important;
+}
+html,
+body {
+  height: 100%;
+  min-height: 100vh;
+}
+
 /* Custom component styles */
 /* Copy to clipboard */
 pre[class*='astro-code'] {
@@ -113,12 +122,6 @@ pre[class*='astro-code'] button:hover {
 /* End for custom component styles */
 
 /* Custom utilities */
-html,
-body {
-  height: 100%;
-  min-height: 100vh;
-}
-
 /* hide #bmc-wbtn on small screens */
 @media only screen and (max-width: 480px) {
   #bmc-wbtn,
