--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -37,6 +37,11 @@ const {
 
 <html lang='en'>
   <head>
+    <style>
+      html {
+        visibility: visible;
+      }
+    </style>
     <script src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js'
     ></script>
     <script
@@ -65,6 +70,9 @@ const {
   <body
     class='flex flex-col items-center min-h-screen antialiased overflow-x-hidden overflow-y-scroll'
   >
+    <script>
+      0;
+    </script>
     <div class='flex-grow w-full max-w-3xl'>
       <Navbar />
       <div class='px-4 pt-4 md:pt-8'>
