Fix: glassmorphism effect for project modals and gradient on name on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,12 @@ import Layout from '../components/layouts/Layout.astro';
       />
     </span>
   </div>
-  <h1 class='mb-[-48px] lg:mb-[-48px]'>My name is Aleksa</h1>
+  <h1 class='mb-[-48px] lg:mb-[-48px]'>
+    My name is <span
+      class='font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-base-content to-indigo-500 dark:from-base-content dark:to-indigo-300'
+      >Aleksa</span
+    >
+  </h1>
   <h2>
     I design and build{' '}
     <span
