Fix: modal border color for light theme

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -133,7 +133,7 @@ import { projects } from '../data/project';
               class='modal-toggle'
             />
             <label for={'my-modal-' + index} class='modal cursor-pointer'>
-              <label class='modal-box w-11/12 max-w-4xl bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border dark:border-red-200 border-indigo-900'>
+              <label class='modal-box w-11/12 max-w-4xl bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border dark:border-gray-200 border-indigo-900'>
                 <label
                   for={'my-modal-' + index}
                   class='btn btn-sm btn-circle absolute right-2 top-2'
