--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,11 @@ import Layout from '../components/layouts/Layout.astro';
       class='text-4xl font-extrabold lg:text-5xl text-base-content'
       >Hello World</span
     >
-    <span class='not-prose ml-3 animate-waving-hand w-[48px] h-[48px]'>
+    <span class='not-prose ml-3 animate-waving-hand'>
       <img
         src='/assets/waving-hand.webp'
         alt='waving hand'
-        class='w-full h-full'
+        class='w-12 h-12'
         srcset='
           /assets/waving-hand.webp 1x,
           /assets/waving-hand.webp 2x
@@ -40,5 +40,6 @@ import Layout from '../components/layouts/Layout.astro';
   <div
     class='w-[275px] h-[275px] sm:w-[350px] sm:h-[350px] md:w-[450px] md:h-[450px] mx-auto mt-4 bg-laptop'
   >
+    <!-- Laptop image here -->
   </div>
 </Layout>
