--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -37,19 +37,10 @@ const {
 
 <html lang='en'>
   <head>
-    <script src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js'
-    ></script>
     <script
-      data-name='BMC-Widget'
-      data-cfasync='false'
-      src='https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js'
-      data-id='aleksa'
-      data-description='Support me on Buy me a coffee!'
-      data-message='Made with 💻 and ☕'
-      data-color='#fb923c'
-      data-position='Right'
-      data-x_margin='8'
-      data-y_margin='8'
+      src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js'
+      async
+      defer
     ></script>
     <script>
       if ('serviceWorker' in navigator) {
@@ -90,5 +81,17 @@ const {
         document.body.style.visibility = 'visible';
       });
     </script>
+    <script
+      data-name='BMC-Widget'
+      data-cfasync='false'
+      src='https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js'
+      data-id='aleksa'
+      data-description='Support me on Buy me a coffee!'
+      data-message='Made with 💻 and ☕'
+      data-color='#fb923c'
+      data-position='Right'
+      data-x_margin='8'
+      data-y_margin='8'
+    ></script>
   </body>
 </html>
