Fix: async and defer are confusing

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -37,10 +37,7 @@ const {
 
 <html lang='en'>
   <head>
-    <script
-      src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js'
-      async
-      defer
+    <script src='https://cdn.jsdelivr.net/npm/theme-change@2.2.0/index.js' defer
     ></script>
     <script>
       if ('serviceWorker' in navigator) {
@@ -82,6 +79,7 @@ const {
       });
     </script>
     <script
+      async
       data-name='BMC-Widget'
       data-cfasync='false'
       src='https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js'
