Fix: about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,32 +5,34 @@ import Layout from '../components/layouts/Layout.astro';
 <Layout title='About' description='About page'>
   <h1>About me</h1>
   <p>
-    Born in 1996, I grew up during the digital rise. As a teenager, I started
-    building my first websites and got more and more interested in the digital
-    economy.
+    Born in 1996, I grew up in the midst of the digital revolution. As a
+    teenager, I developed a passion for building websites and became
+    increasingly interested in the digital economy.
   </p>
   <p>
-    After school, I started to study{' '}
-    <span class='highlight'>
-      Computer Science as a bachelor&apos;s degree</span
-    >{' '}
-    at Singidunum University and completed many online courses alongside.
+    After completing high school, I pursued a Bachelor's degree in <span
+      class='highlight'>Computer Science</span
+    > at Singidunum University and also took a number of online courses to further
+    my knowledge and skills.
   </p>
   <p>
-    Passionate and self-motivated {' '}
-    <span class='highlight'>full-stack web developer</span>, eager to turn ideas
-    into applications. My ambitious are to stay on the leading edge of the
-    always changing <span class='highlight'>web development</span> world and find
-    new learning opportunities or projects to keep improving.
+    As a passionate and self-motivated <span class='highlight'
+      >full-stack web developer</span
+    >, I am always eager to turn ideas into applications. My ambition is to stay
+    on the cutting edge of the constantly evolving <span class='highlight'
+      >web development</span
+    > world and seek out new learning opportunities and projects to continue improving
+    my skills.
   </p>
   <p>
-    I work to create <span class='highlight'
+    In my work, I strive to create <span class='highlight'
       >modern, responsive websites and applications</span
-    > that suit the wants and needs of my clients while solving problems through
-    innovative solutions and collaboration.
+    > that meet the needs and desires of my clients, while also finding innovative
+    solutions to problems through collaboration.
   </p>
   <p>
-    Out of the office, you will find me traveling, dreaming of basketball,
-    playing video games, and petting all the good cats in the world. 😸
+    In my free time, you can find me traveling, dreaming of playing basketball,
+    and playing video games. I also have a soft spot for cats and love to pet
+    them whenever I can. 😸
   </p>
 </Layout>
