Fix: projects and contat page text

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,8 +13,9 @@ import Avatar from '../components/utilities/Avatar.astro';
         <Avatar />
       </div>
       <p class='w-full'>
-        Feel free to reach out to me at any time, I am always interested in{' '}
-        <span class='highlight'>new stuff</span>!
+        Feel free to reach out to me at any time, I am always interested in <span
+          class='highlight'>new opportunities and projects</span
+        >. Thank you!
       </p>
     </div>
     <form
