--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,7 +14,7 @@ import Avatar from '../components/utilities/Avatar.astro';
       </div>
       <p class='w-full'>
         Feel free to reach out to me at any time, I am always interested in <span
-          class='highlight'>new opportunities and projects</span
+          class='highlight'>things</span
         >. Thank you!
       </p>
     </div>
