Fix: about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -35,4 +35,10 @@ import Layout from '../components/layouts/Layout.astro';
     and playing video games. I also have a soft spot for cats and love to pet
     them whenever I can. 😸
   </p>
+  <p
+    style="font-family: 'Segoe Script', cursive;"
+    class='text-4xl text-right font-bold'
+  >
+    Aleksa C.
+  </p>
 </Layout>
