--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,7 +37,7 @@ import Layout from '../components/layouts/Layout.astro';
   </p>
   <p
     style="font-family: 'Segoe Script', cursive;"
-    class='text-4xl text-right font-bold select-none'
+    class='text- text-right font-bold select-none px-4'
   >
     Aleksa C.
   </p>
