--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -237,14 +237,4 @@ import { navItems } from '../data/nav';
     </div>
   </div>
 </div>
-<script>
-  // @ts-ignore
-  import Typewriter from 'typewriter-effect/dist/core';
-  document.addEventListener('DOMContentLoaded', () => {
-    const tw = new Typewriter(document.querySelector('#typed-logo'), {
-      loop: false,
-      autoStart: true
-    });
-    tw.typeString('aleksa.codes').start();
-  });
-</script>
+<script src='../scripts/typewritter.ts'></script>
